--- a/countries-web-app/assets/main.css
+++ b/countries-web-app/assets/main.css
@@ -21,6 +21,10 @@ body {
 
 /*Header*/
 
-.header{
+.header {
     background-color: var(--element);
+}
+
+.header-switch svg g{
+    fill: var(--color);
 }
